<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ps_tv_name"/>

        <EditText
            android:id="@+id/PassTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ps_tv_id"/>

        <EditText
            android:id="@+id/IdInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ps_tv_pw"/>

        <EditText
            android:id="@+id/PassInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"/>
    </LinearLayout>

    <Button
        android:id="@+id/BtAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="OnAddButtonClick"
        android:text="@string/ps_bt_add"/>

    <Button
        android:id="@+id/BtReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="OnReturnButtonClick"
        android:text="@string/ps_bt_return"/>

</LinearLayout>