<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp">

    <TextView
        android:id="@+id/tv_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/bt_Id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/pl_bt_id"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/bt_Pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/pl_bt_pw"
        android:layout_marginLeft="1dp"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/bt_Delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:layout_marginLeft="1dp"
        android:text="@string/pl_bt_delete"
        android:textSize="10sp"/>

</LinearLayout>
